--- a/home.html
+++ b/home.html
@@ -6,6 +6,6 @@
 </head>
 <body>
    <h1>My Application Home</h1>
-   <a href="project.html">project</a>
+   <a href="/project">project</a>
 </body>
 </html>
