--- a/project.html
+++ b/project.html
@@ -9,7 +9,7 @@
 <body>
    <h1>Projects</h1>
    <h3>Project List</h3>
-   <a href="registration.html">REGISTER</a><br>
-   <a href="home.html">&lt;- Back to home</a>
+   <a href="/registration">REGISTER</a><br>
+   <a href="/home">&lt;- Back to home</a>
 </body>
 </html>
